w32:spawn: Fix inheriting HANDLEs.

* src/spawn-w32.c (spawn_detached): Use EXTENDED_STARTUPINFO_PRESENT
to enable lpAttributeList in STARTUPINFOEXW.
(_gpgrt_process_spawn): Likewise.

--

GnuPG-bug-id: 7716
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>